<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewChallengeFragment"
    android:background="@color/blue_3">

    <TextView
        android:id="@+id/new_challenge_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/new_challenge_title"
        android:fontFamily="@font/lavigne"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_title_text"
        app:layout_constraintLeft_toLeftOf="@id/new_challenge_title_text"
        android:text="@string/title_sub"/>
    <EditText
        android:id="@+id/new_challenge_title"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_challenge_title_text"
        app:layout_constraintBottom_toBottomOf="@id/new_challenge_title_text"
        app:layout_constraintLeft_toRightOf="@id/new_challenge_title_text"
        android:layout_marginLeft="35dp"
        android:background="@drawable/rounded_corner_white"
        android:maxLength="@string/title_max"/>

    <TextView
        android:id="@+id/new_challenge_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_title_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/new_challenge_description"
        android:fontFamily="@font/lavigne"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"/>
    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_description_text"
        app:layout_constraintLeft_toLeftOf="@id/new_challenge_description_text"
        android:text="@string/description_sub"/>
    <EditText
        android:id="@+id/new_challenge_description"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/new_challenge_description_text"
        app:layout_constraintLeft_toLeftOf="@+id/new_challenge_title"
        android:background="@drawable/rounded_corner_white"
        android:gravity="start"
        android:maxLength="@string/description_max"/>
    <TextView
        android:id="@+id/new_challenge_group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_description"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/group"
        android:fontFamily="@font/lavigne"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>
    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_challenge_group_text"
        app:layout_constraintLeft_toLeftOf="@id/new_challenge_group_text"
        android:text="@string/group_sub"
        android:visibility="gone"/>
    <Spinner
        android:id="@+id/new_challenge_group"
        android:layout_width="200dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/new_challenge_group_text"
        app:layout_constraintBottom_toBottomOf="@id/new_challenge_group_text"
        app:layout_constraintLeft_toRightOf="@id/new_challenge_title_text"
        android:layout_marginLeft="35dp"
        android:background="@drawable/rounded_corner_white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/submit_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"/>


</androidx.constraintlayout.widget.ConstraintLayout>