<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/blue_3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/curr_challenges_text"
        android:text="@string/current_challenges"
        android:fontFamily="@font/lavigne"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/curr_challenges"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintTop_toBottomOf="@id/curr_challenges_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toBottomOf="@id/curr_challenges"
        android:id="@+id/past_challenges_text"
        android:text="@string/past_challenges"
        android:fontFamily="@font/lavigne"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/past_challenges"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintTop_toBottomOf="@id/past_challenges_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/upload_container"
        android:orientation="vertical"/>
    <TextView
        android:id="@+id/emptyCurr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/curr_challenges"
        android:text="@string/emptyCurr"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/emptyPast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/past_challenges"
        android:text="@string/emptyPast"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>