<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/blue_3">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/username"
        android:background="@drawable/profile_pic_background"/>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lavigne"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@id/password_text"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lavigne"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groups"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lavigne"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintTop_toTopOf="@id/username_text"
        app:layout_constraintBottom_toBottomOf="@id/username_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp"
        android:maxLength="@string/user_pass_max"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintTop_toTopOf="@id/password_text"
        app:layout_constraintBottom_toBottomOf="@id/password_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="25dp"
        android:maxLength="@string/user_pass_max"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/group1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.25"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintTop_toTopOf="@id/group_text"
        app:layout_constraintBottom_toBottomOf="@id/group_text"
        app:layout_constraintLeft_toLeftOf="@id/password"
        android:maxLength="@string/group_max"/>
    <EditText
        android:id="@+id/group2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.25"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintTop_toBottomOf="@id/group1"
        app:layout_constraintLeft_toLeftOf="@id/password"
        android:layout_marginTop="20dp"
        android:maxLength="@string/group_max"/>
    <EditText
        android:id="@+id/group3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.25"
        android:background="@drawable/rounded_corner_white"
        app:layout_constraintTop_toBottomOf="@id/group2"
        app:layout_constraintLeft_toLeftOf="@id/password"
        android:layout_marginTop="20dp"
        android:maxLength="@string/group_max"/>

    <Button
        android:id="@+id/group1_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/group1"
        app:layout_constraintTop_toTopOf="@id/group1"
        app:layout_constraintBottom_toBottomOf="@id/group1"
        android:text="@string/leave_group"
        android:backgroundTint="@color/red"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"/>
    <Button
        android:id="@+id/group2_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/group2"
        app:layout_constraintTop_toTopOf="@id/group2"
        app:layout_constraintBottom_toBottomOf="@id/group2"
        android:text="@string/leave_group"
        android:backgroundTint="@color/red"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"/>
    <Button
        android:id="@+id/group3_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/group3"
        app:layout_constraintTop_toTopOf="@id/group3"
        app:layout_constraintBottom_toBottomOf="@id/group3"
        android:text="@string/leave_group"
        android:backgroundTint="@color/red"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/red"
        android:text="@string/log_out"/>

</androidx.constraintlayout.widget.ConstraintLayout>